--- a/SEM-1/DES-WEB/SITE/index.html
+++ b/SEM-1/DES-WEB/SITE/index.html
@@ -4,17 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site Aula Fatec</title>
+  <title>Exemplo de Site</title>
 </head>
 
 <body>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
+  <div id="container">
+    <div id="header">
+      <h1>Exemplo site</h1>
+      <ul>
+        <li>Home</li>
+        <li>Notícias</li>
+        <li>Fotos</li>
+        <li>Contato</li>
+      </ul>
+    </div>
+  </div>
 
 </body>
 
