header e menu simples

--- a/SEM-1/DES-WEB/SITE/index.html
+++ b/SEM-1/DES-WEB/SITE/index.html
@@ -5,18 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exemplo de Site</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <div id="container">
     <div id="header">
-      <h1>Exemplo site</h1>
-      <ul>
+      <h1 id="logo">Exemplo site</h1>
+      <ul id="menu">
         <li>Home</li>
         <li>Notícias</li>
         <li>Fotos</li>
         <li>Contato</li>
       </ul>
+    </div>
+    <div id="content">
+      <img src="/SEM-1/DES-WEB/SITE/images/principal.jpg" alt="imagem azul da galaxia abstrata">
+      <h2>Conteudo da pagina</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, impedit!</p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quo atque tempora quia impedit unde error repellendus cum, nam doloribus est eum doloremque in beatae voluptas architecto! Veniam, odio enim! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptate totam eligendi? Inventore quasi omnis ut aut debitis amet sequi, reiciendis exercitationem at non maxime necessitatibus. Expedita dicta ipsum earum?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum consequuntur consequatur ea quo eius iusto saepe dicta unde sunt quibusdam, laboriosam nobis, officia nulla odio, quisquam dolores provident aut quidem?
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem sed quae, animi quisquam omnis consequatur magnam tenetur assumenda doloribus! Aliquam veniam voluptatem odio vitae ab, aliquid inventore delectus reprehenderit molestias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consequatur necessitatibus, ab voluptates possimus quos vitae qui autem blanditiis reiciendis saepe hic cumque recusandae nemo corrupti dicta enim cupiditate cum?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt aspernatur molestias accusantium cumque, quaerat iure error quidem officiis doloribus? Nesciunt praesentium vitae eaque aliquam nisi minima omnis blanditiis ex reprehenderit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit nobis possimus dolore aliquam accusamus similique a, dignissimos, itaque ab aperiam esse ullam. Omnis ipsam at sit aspernatur nam fugit consequatur.
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut vel enim iusto repellat perferendis harum natus optio aliquam nihil, dolorem rem ullam eos accusantium unde at sapiente nobis. Veritatis, optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure corrupti aliquid quod eum aut, similique necessitatibus nemo corporis adipisci? A, doloribus culpa? Culpa reprehenderit autem eveniet eos inventore atque voluptates.
+      </p>
+    </div>
+    <div id="footer">
+      <p>&copy;2024 - Fatec Indaiatuba</p>
     </div>
   </div>
 
