--- a/SEM-1/DES-WEB/SITE/index.html
+++ b/SEM-1/DES-WEB/SITE/index.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div id="content">
-      <img src="/SEM-1/DES-WEB/SITE/images/principal.jpg" alt="imagem azul da galaxia abstrata">
+      <p><img src="/SEM-1/DES-WEB/SITE/images/principal.jpg" alt="imagem azul da galaxia abstrata"></p>
       <h2>Conteudo da pagina</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, impedit!</p>
       <p>
