--- a/SEM-1/DES-WEB/SITE/index.html
+++ b/SEM-1/DES-WEB/SITE/index.html
@@ -17,7 +17,7 @@
       <h1 id="logo">Exemplo site</h1>
       <ul id="menu">
         <li>Home</li>
-        <li>Notícias</li>
+        <li><a href="pages/noticias.html">Notícias</a></li>
         <li>Fotos</li>
         <li>Contato</li>
       </ul>
