--- a/SEM-1/DES-WEB/SITE/pages/tabela.html
+++ b/SEM-1/DES-WEB/SITE/pages/tabela.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="../css/noticias.css">
+  <link rel="stylesheet" href="../css/tabela.css">
 </head>
 
 <body>
@@ -23,27 +24,11 @@
     </nav>
   </header>
   <main>
-    <section id="manchete">
-      <div class="corpo-manchete">
-        <h2>CONFIRA QUEM FOI PEGO PELA FEDERAL APOS FRAUDE NO TIGRINHO</h2>
-        <p>Natanael Noel mais conhecido como bãsslaiguier foi peso após fraudar o jogo do tigrinho, ele descobriu a hora que a banca tava pagando.</p>
-        <p><a href="tabela.html">Confira os horarios vazados pelo leaker bãsslaiguier</a></p>
+    <section id="">
+      <h2>QUENTISSIMO, HORARIO QUE O TIGRE TÁ PAGANDO</h2>
+      <div class="tabela">
+        <img src="../images/tigres.png" alt="togre">
       </div>
-      <img src="../images/light.jpg" alt="buzzlaiga">
-    </section>
-    <section id="noticias">
-      <article id="noticia1">
-        <h3>Titulo da noticia 1</h3>
-        <p>alonoticiaalou</p>
-      </article>
-      <article id="noticia2">
-        <h3>Titulo da noticia 2</h3>
-        <p>noticiasdozap</p>
-      </article>
-      <article id="noticia3">
-        <h3>Titulo da noticia 3</h3>
-        <p>limaozinhovirus</p>
-      </article>
     </section>
   </main>
   <footer>
