--- a/SEM-1/DES-WEB/BOOTSTRAP-APRENDENDO/index.html
+++ b/SEM-1/DES-WEB/BOOTSTRAP-APRENDENDO/index.html
@@ -4,11 +4,117 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>estudando bootstrap</title>
+  <title>Estudando Bootstrap</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Ação</a>
+            <a class="dropdown-item" href="#">Outra ação</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Algo mais aqui</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Desativado</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+      </form>
+    </div>
+  </nav>
+
+  <div class="container mt-3">
+    <div class="alert alert-secondary" role="alert">
+      Um simples alerta secondary. Olha só!
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-sm-12 mb-2">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Título do card</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Subtitulo do card</h6>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+            <a href="#" class="card-link">Link do card</a>
+            <a href="#" class="card-link">Outro link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-12 mb-2">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Título do card</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Subtitulo do card</h6>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+            <a href="#" class="card-link">Link do card</a>
+            <a href="#" class="card-link">Outro link</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-12 mb-2">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Título do card</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Subtitulo do card</h6>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+            <a href="#" class="card-link">Link do card</a>
+            <a href="#" class="card-link">Outro link</a>
+          </div>
+        </div>
+      </div>
+    </div><!--fim do row-->
+
+    <div class="row">
+      <div class="col-md-8 col-sm-12">
+        <div class="card">
+          <div class="card-body">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/xUUx1nZEpoY?si=0jO8GEjzOE0PNBsS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <div class="card">
+          <div class="card-body">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.0928476204544!2d-46.722619689281316!3d-23.60100286296084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce56c31b1fe649%33157d134f4dfc6618c2!2sMorumBis!5e0!3m2!1spt-BR!2sbr!4v1716983378204!5m2!1spt-BR!2sbr" width="100%" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
